fix scroll overflow

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 html,
 body {
   margin: 0;
-  height: 100%;
+  min-height: 100%;
   color: var(--coal);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
